<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearNotaNumerica">

    <SearchView
        android:id="@+id/searchView"
        style="@style/SearchViewStyle"
        android:layout_width="183dp"
        android:layout_height="44dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloLista2"
        android:layout_width="220dp"
        android:layout_height="83dp"
        android:layout_marginBottom="716dp"
        android:contentDescription="@string/ivLista"
        android:text="@string/tvTituloNotaEnumerada"
        android:textColor="#090909"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivUsuario8"
        android:layout_width="81dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ivUsuario4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardarLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/btnInsertarLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTitulo8"
        android:layout_width="246dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/ivTitulo7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/titulo" />

    <ImageView
        android:id="@+id/ivNotaEnumerada"
        android:layout_width="48dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ivNotaEnumerada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/diario" />

    <ImageView
        android:id="@+id/ivNotaEnumerada2"
        android:layout_width="93dp"
        android:layout_height="77dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/ivNotaEnumerada2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/diario" />


</androidx.constraintlayout.widget.ConstraintLayout>